Fixed footer not showing up on smaller display (e.g. laptop) and a couple other issues

--- a/css/index.css
+++ b/css/index.css
@@ -729,6 +729,7 @@ a {
 
 #footer p {
     color: #f3f3f3;
+    margin: 8px;
 }
 
 /*****************
